2024-05-21T01:05:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9167174778 # 291
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-21
* notice: last 14d: unq all: 3 6
* notice: prev accum: outdated-unq outdated-all / unq all: 113 316 / 115 321
* notice: next accum: outdated-unq outdated-all / unq all: 113 316 / 116 322
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-20]

2024-05-17T16:17:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9131215738 # 281
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-17
* notice: last 14d: unq all: 2 5
* notice: prev accum: outdated-unq outdated-all / unq all: 113 316 / 114 317
* notice: next accum: outdated-unq outdated-all / unq all: 113 316 / 115 321
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [] / [2024-05-17]

2024-05-17T01:05:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9121328893 # 279
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-17
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 112 315 / 113 316
* notice: next accum: outdated-unq outdated-all / unq all: 113 316 / 114 317
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-05-01] / [2024-05-16]

2024-05-02T01:02:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8917064090 # 234