@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-21T01:05:18Z",
-  "count_outdated" : 316,
-  "uniques_outdated" : 113,
+  "timestamp" : "2024-05-31T00:53:32Z",
+  "count_outdated" : 317,
+  "uniques_outdated" : 114,
   "count" : 322,
   "uniques" : 116,
   "views" : [
-    {
-      "timestamp": "2024-05-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-05-17T00:00:00Z",
       "count": 4,
