@@ -1,12 +1,7 @@
 {
-  "count": 6,
-  "uniques": 3,
+  "count": 5,
+  "uniques": 2,
   "views": [
-    {
-      "timestamp": "2024-05-16T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-05-17T00:00:00Z",
       "count": 4,
